--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'raleway-bold';
+  src: url('../fonts/raleway-bold.woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
 $body-color: blue;
 
 body {
