I changed file index.html

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,4 +12,13 @@ body {
   & p {
     background: black !important;
   }
+  & .one {
+    font-family: 'raleway-bold';
+    font-size: 40px;
+    margin-bottom: 20px; 
+  }
+
+  & .two {
+    font-size: 40px;
+  }
 }  
