I changed file index.html

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,21 +5,20 @@
   font-style: normal;
 }
 
-$body-color: blue;
-
 body {
-  color: $body-color;
-  height: 500px;
-  & p {
-    background: black !important;
-  }
-  & .one {
-    font-family: 'raleway-bold';
-    font-size: 40px;
-    margin-bottom: 20px; 
-  }
+  @media screen and (min-width: 0px) and (max-width: 940px) {
 
-  & .two {
-    font-size: 40px;
   }
-}  
+}
+.page {
+  &-section {
+    &_header {
+      height: 100vh;
+      background: url(../../public/images/headphones.svg);
+
+    }
+    &__inner {
+      padding: 0 250px;
+    }
+  }
+}
