--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -26,7 +26,9 @@ body {
 }
 .page {
   &-section {
+    padding: 50px 0 100px;
     &_header {
+      padding: 0;
       height: 100vh;
       min-height: 470px;
       background: url(../../public/images/headphones.svg),
@@ -45,6 +47,9 @@ body {
         min-height: 100vh;
       }
 
+    }
+    &_about {
+      background: url(../../public/images/pattern-bg.jpg),
     }
     &__inner {
       margin: 0 auto;
@@ -323,5 +328,36 @@ body {
       }
     }
   }
- 
+  & .about {
+    width: 750px;
+    margin: 0 auto;
+    & .about-slider {
+      &__item {
+        transition: all 1s;
+      }
+      & .slider-section {
+        box-sizing: border-box;
+        width: 500px;
+        height: 350px;
+        position: relative;
+        transition: all 1s;
+        &__inner {
+          height: 350px;
+          border-radius: 20px;
+          background: #fff;
+          transition: all 1s;
+          position: relative;
+          z-index: 0;
+          opacity: .5;
+        }
+      }
+
+      & .slick-current .slider-section .slider-section__inner {
+        opacity: 1;
+        z-index: 1;
+        transform: scale(1.2, 1);
+        
+      }
+    }
+  }
 }
